tests/language_modules/07_string/valid/string_concat.vf
module StringConcat

function label() returns String
is
    return String.concat("vera", "flow")
end label

end StringConcat