tests/language_modules/07_string/invalid_semantics/string_concat_argument_count.vf
module StringConcatArgumentCount

function label() returns String
is
    return String.concat("vera")
end label

end StringConcatArgumentCount